# Simple3DRenderer

./: CMakeLists.txt  README.md
src/core/: App.cpp  App.hpp  CMakeLists.txt
src/core/polygons/: Cube.cpp  Cube.hpp  Object3D.cpp  Object3D.hpp  Pyramid.cpp  Pyramid.hpp
src/main/: CMakeLists.txt
